# ml

./: list-tuple-performance.py  mnist.py  mnist_dataset.ipynb  pyproject.toml
