[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["bhargavjagan <22073810+bhargavjagan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
keras = "^3.0.5"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
